--- a/.github/workflows/UseJsAction.yml
+++ b/.github/workflows/UseJsAction.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Hello world action step
-        uses: JsAction # Uses an action in the root directory
+        uses: ./.github/workflows/JsAction # Uses an action in the root directory
         id: hello
         with:
           who-to-greet: 'Mona the Octocat'
