package name change

--- a/.github/workflows/JsAction/action.yml
+++ b/.github/workflows/JsAction/action.yml
@@ -1,4 +1,4 @@
-name: 'JS Action'
+name: 'cartertestjsaction'
 description: 'Greet someone and record the time'
 inputs:
   who-to-greet:  # id of input
