--- a/.github/workflows/JsAction/package.json
+++ b/.github/workflows/JsAction/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JsAction",
+  "name": "cartertestjsaction",
   "version": "1.0.0",
   "description": "This action prints \"Hello World\" or \"Hello\" + the name of a person to greet to the log.",
   "main": "index.js",
