added node version

--- a/.github/workflows/JsAction/action.yml
+++ b/.github/workflows/JsAction/action.yml
@@ -1,4 +1,5 @@
 name: 'cartertestjsaction'
+author: 'Carter Medlin'
 description: 'Greet someone and record the time'
 inputs:
   who-to-greet:  # id of input
