--- a/.github/workflows/UseJsAction.yml
+++ b/.github/workflows/UseJsAction.yml
@@ -1,3 +1,4 @@
+name: Carter testing JS job
 on: [push]
 
 jobs:
@@ -9,6 +10,12 @@ jobs:
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - run: npm install
+      - run: npm run build --if-present
       - name: Hello world action step
         uses: ./.github/workflows/JsAction # Uses an action in the root directory
         id: hello
