--- a/.github/workflows/UseJsAction.yml
+++ b/.github/workflows/UseJsAction.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+      - run: cd .github/workflows/JsAction
       - run: npm install
       - run: npm run build --if-present
       - name: Hello world action step
