--- a/.github/workflows/UseJsAction.yml
+++ b/.github/workflows/UseJsAction.yml
@@ -19,7 +19,7 @@ jobs:
       - run: cd .github/workflows/JsAction
       - run: npm install --prefix ".github/workflows/JsAction"
       - run: cd .github/workflows/JsAction
-      - run: npm run build --if-present --prefix ".github/workflows/JsAction"
+      - run: npm run build --prefix ".github/workflows/JsAction"
       - name: Hello world action step
         uses: ./.github/workflows/JsAction # Uses an action in the root directory
         id: hello
