--- a/.github/workflows/eleventy_validate.yml
+++ b/.github/workflows/eleventy_validate.yml
@@ -9,4 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Build
-        uses: cagov/actions-eleventy@2.1
+        uses: cagov/actions-eleventy@3.1
+        with:	
+          build_task: build
+          build_eleventy_args: --formats=html,njk --input ./pages --output ./docs	
