--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "imagemin-pngquant": "^9.0.1",
     "imagemin-webp": "^6.0.0",
     "md5": "^2.3.0",
+    "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.0.2",
