Update page - people-want-to-know.json

--- a/pages/wordpress-posts/people-want-to-know.json
+++ b/pages/wordpress-posts/people-want-to-know.json
@@ -19,8 +19,8 @@
       "_url": "get-financial-help/"
     },
     {
-      "text": "How are schools and colleges reopening?",
-      "_url": "education/"
+      "text": "How can I participate in CA Notify?",
+      "_url": "contact-tracing/#California-COVID-Notify"
     },
     {
       "text": "Who should wear a mask?",
