--- a/web.config
+++ b/web.config
@@ -105,6 +105,7 @@
           <add key="/zh-hant/roadmap/" value="/zh-hant/safer-economy/" />
           <add key="/zh-hant/roadmap-counties/" value="/zh-hant/safer-economy/" />
           <add key="/testing-and-treatment/" value="/get-tested/" />
+          <add key="/notify/" value="https://canotify.ca.gov/" />
         </rewriteMap>
       </rewriteMaps>
       <rules>
