--- a/.github/workflows/test_e2e.yml
+++ b/.github/workflows/test_e2e.yml
@@ -1,7 +1,7 @@
 name: Eleventy PR Validation
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ endtoendtesting ]
 
 jobs:
   build:
@@ -18,4 +18,4 @@ jobs:
         run: |
           npm test
         env:
-          CI: true        
+          CI: true
