--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cross-spawn": "^7.0.3",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
+    "express": "^4.17.1",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
@@ -39,11 +40,13 @@
     "imagemin": "^7.0.1",
     "imagemin-pngquant": "^9.0.1",
     "imagemin-webp": "^6.0.0",
+    "jest": "^26.6.3",
     "md5": "^2.3.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.0.2",
     "postcss-url": "^8.0.0",
+    "puppeteer": "^5.5.0",
     "rollup": "^2.33.1",
     "rollup-plugin-terser": "^7.0.2"
   },
@@ -60,7 +63,8 @@
     "deploy": "gulp deploy",
     "local": "npm run watch",
     "local:dev": "cross-env NODE_ENV=development npm run watch",
-    "compress:img": "cd src/build && node img.js"
+    "compress:img": "cd src/build && node img.js",
+    "test": "jest test/*.spec.js"
   },
   "repository": {
     "type": "git",
