specify version of force resolutions package

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "axios": "^0.21.1"
   },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
+    "preinstall": "npx npm-force-resolutions@0.0.3",
     "dev": "cross-env NODE_ENV=development npm run start",
     "start": "npm run watch",
     "serve": "npx @11ty/eleventy --serve --quiet",
