--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@cagov/accordion": "^2.0.0",
+    "@cagov/anchor-events": "^1.0.0",
     "@cagov/lookup": "^1.0.2",
     "@cagov/step-list": "^1.0.11",
     "@webcomponents/webcomponentsjs": "^2.5.0",
