Update page - help-for-seniors.html f2b84edb9e61772b3ad0a6fe81b052bbb850e303

--- a/web.config
+++ b/web.config
@@ -116,6 +116,8 @@
           <add key="/vi/public-recreation/" value="/vi/safer-economy" />
           <add key="/zh-hans/public-recreation/" value="/zh-hans/safer-economy" />
           <add key="/zh-hant/public-recreation/" value="/zh-hant/safer-economy" />
+          <add key="/care-in-senior-facilities/" value="/help-for-seniors/#living-in-senior-facilities" />
+          <add key="/restaurants-deliver-home-meals-for-seniors/" value="/help-for-seniors/#great-plates" />
         </rewriteMap>
       </rewriteMaps>
       <rules>
