Update page - vaccines.html f7a960ed370b93cd1166583db2c56bafb24b80fb

--- a/web.config
+++ b/web.config
@@ -119,6 +119,8 @@
           <add key="/zh-hant/public-recreation/" value="/zh-hant/safer-economy" />
           <add key="/care-in-senior-facilities/" value="/help-for-seniors/#living-in-senior-facilities" />
           <add key="/restaurants-deliver-home-meals-for-seniors/" value="/help-for-seniors/#great-plates" />
+          <add key="/vaccines/:" value="/vaccines/" />
+          <add key="/vaccines/:Beginning" value="/vaccines/" />
         </rewriteMap>
       </rewriteMaps>
       <rules>
