set node version to help keep package installs clear and sync with the version of package-lock

--- a/package.json
+++ b/package.json
@@ -91,5 +91,8 @@
   "bugs": {
     "url": "https://github.com/cagov/covid19/issues"
   },
-  "homepage": "https://github.com/cagov/covid19#readme"
+  "homepage": "https://github.com/cagov/covid19#readme",
+  "engines": {
+    "npm": "~14.15.3"
+  }
 }
