Update page - page-redirect-table.json 80c11bcd22c392f7c589375500d2dddc0894bf74

--- a/web.config
+++ b/web.config
@@ -61,9 +61,9 @@
           <add key="/cuerpo-de-salud-de-california/" value="/healthcorps-es/" />
           <add key="/lugares-publicos/" value="/es/safer-economy" />
           <add key="/impuestos/" value="/taxes-es/" />
-          <add key="/pruebas-y-tratamiento/" value="/testing-and-treatment-es/" />
+          <add key="/pruebas-y-tratamiento/" value="/es/get-tested/" />
           <add key="/linea-de-atencion-de-covid-19/" value="/hotline-es/" />
-          <add key="/testing-and-treatment-zh-hant-2/" value="/testing-and-treatment-zh-hant/" />
+          <add key="/testing-and-treatment-zh-hant-2/" value="/zh-hant/get-tested/" />
           <add key="/los-sintomas-y-los-riesgos/" value="/symptoms-and-risks-es/" />
           <add key="/quedese-en-casa-excepto-por-necesidades-esenciales/" value="/stay-home-except-for-essential-needs-es/" />
           <add key="/entregas-a-domicilio-para-personas-de-la-tercera-edad/" value="/restaurants-deliver-home-meals-for-seniors-es/" />
@@ -107,6 +107,13 @@
           <add key="/zh-hant/roadmap/" value="/zh-hant/safer-economy/" />
           <add key="/zh-hant/roadmap-counties/" value="/zh-hant/safer-economy/" />
           <add key="/testing-and-treatment/" value="/get-tested/" />
+          <add key="/es/testing-and-treatment/" value="/es/get-tested/" />
+          <add key="/tl/testing-and-treatment/" value="/tl/get-tested/" />
+          <add key="/ar/testing-and-treatment/" value="/ar/get-tested/" />
+          <add key="/ko/testing-and-treatment/" value="/ko/get-tested/" />
+          <add key="/vi/testing-and-treatment/" value="/vi/get-tested/" />
+          <add key="/zh-hans/testing-and-treatment/" value="/zh-hans/get-tested/" />
+          <add key="/zh-hant//testing-and-treatment/" value="/zh-hant/get-tested/" />
           <add key="/notify/" value="https://canotify.ca.gov/" />
           <add key="/schools/" value="https://schools.covid19.ca.gov/" />
           <add key="/public-recreation/" value="/safer-economy/" />
@@ -118,7 +125,21 @@
           <add key="/zh-hans/public-recreation/" value="/zh-hans/safer-economy" />
           <add key="/zh-hant/public-recreation/" value="/zh-hant/safer-economy" />
           <add key="/care-in-senior-facilities/" value="/help-for-seniors/#living-in-senior-facilities" />
+          <add key="/es/care-in-senior-facilities/" value="/es/help-for-seniors/#living-in-senior-facilities" />
+          <add key="/tl/care-in-senior-facilities/" value="/tl/help-for-seniors/#living-in-senior-facilities" />
+          <add key="/ar/care-in-senior-facilities/" value="/ar/help-for-seniors/#living-in-senior-facilities" />
+          <add key="/ko/care-in-senior-facilities/" value="/ko/help-for-seniors/#living-in-senior-facilities" />
+          <add key="/vi/care-in-senior-facilities/" value="/vi/help-for-seniors/#living-in-senior-facilities" />
+          <add key="/zh-hans/care-in-senior-facilities/" value="/zh-hans/help-for-seniors/#living-in-senior-facilities" />
+          <add key="/zh-hant/care-in-senior-facilities/" value="/zh-hant/help-for-seniors/#living-in-senior-facilities" />
           <add key="/restaurants-deliver-home-meals-for-seniors/" value="/help-for-seniors/#great-plates" />
+          <add key="/es/restaurants-deliver-home-meals-for-seniors/" value="/es/help-for-seniors/#great-plates" />
+          <add key="/tl/restaurants-deliver-home-meals-for-seniors/" value="/tl/help-for-seniors/#great-plates" />
+          <add key="/ar/restaurants-deliver-home-meals-for-seniors/" value="/ar/help-for-seniors/#great-plates" />
+          <add key="/ko/restaurants-deliver-home-meals-for-seniors/" value="/ko/help-for-seniors/#great-plates" />
+          <add key="/vi/restaurants-deliver-home-meals-for-seniors/" value="/vi/help-for-seniors/#great-plates" />
+          <add key="/zh-hans/restaurants-deliver-home-meals-for-seniors/" value="/zh-hans/help-for-seniors/#great-plates" />
+          <add key="/zh-hant/restaurants-deliver-home-meals-for-seniors/" value="/zh-hant/help-for-seniors/#great-plates" />
           <add key="/vaccines/:" value="/vaccines/" />
           <add key="/vaccines/:Beginning" value="/vaccines/" />
         </rewriteMap>
