--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "awesomplete-es6": "^1.2.2",
     "element-closest-polyfill": "^1.0.2",
+    "jest": "^26.6.3",
     "throttle-debounce": "^3.0.1",
     "url-search-params-polyfill": "^8.1.0",
     "whatwg-fetch": "^3.6.2"
@@ -25,6 +26,7 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
+    "@web/dev-server": "^0.1.10",
     "acorn": ">=8.1.0",
     "browser-sync": "^2.26.14",
     "cross-env": "^7.0.3",
@@ -32,14 +34,12 @@
     "css-purge": "^3.1.8",
     "cssnano": "^4.1.10",
     "del": "^6.0.0",
-    "express": "^4.17.1",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "jest": "^26.6.3",
     "md5": "^2.3.0",
     "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
@@ -49,6 +49,7 @@
     "promise-timeout": "^1.3.0",
     "proxyquire": "^2.1.3",
     "puppeteer": "^5.5.0",
+    "query-string": "^7.0.0",
     "rollup": "^2.42.3",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-terser": "^7.0.2",
@@ -57,6 +58,7 @@
     "tape": "^5.0.1"
   },
   "scripts": {
+    "devserver": "web-dev-server --root-dir docs/",
     "preinstall": "npx npm-force-resolutions@0.0.3",
     "dev": "cross-env NODE_ENV=development npm run start",
     "start": "npm run watch",
