--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "local:dev": "cross-env NODE_ENV=development npm run watch",
     "compress:img": "cd src/build && node img.js",
     "testdata": "tap test/11ty-data.js",
-    "test": "jest test/*.spec.js"
+    "test": "jest test/*.spec.js --detectOpenHandles"
   },
   "repository": {
     "type": "git",
