--- a/pages/wordpress-posts/people-want-to-know.json
+++ b/pages/wordpress-posts/people-want-to-know.json
@@ -11,6 +11,10 @@
     {
       "text": "What are the symptoms and risks?",
       "_url": "symptoms-and-risks/"
+    },
+    {
+      "text": "What do I do about stress?",
+      "_url": "manage-stress-for-health/#your-stress"
     }
   ],
   "Table2": [
@@ -25,6 +29,10 @@
     {
       "text": "What’s the plan to keep schools safe?",
       "_url": "https://schools.covid19.ca.gov/"
+    },
+    {
+      "text": "How do I talk to my kids about COVID-19?",
+      "_url": "manage-stress-for-health/#parents-kids"
     }
   ]
 }
