--- a/web.config
+++ b/web.config
@@ -19,6 +19,7 @@
           <add key="/stats/" value="foo" />
         </rewriteMap>
         <rewriteMap name="StaticRewrites" defaultValue="">
+          <add key="/v3-state-dashboard/" value="/state-dashboard/" />
           <add key="/v2-state-dashboard/" value="/state-dashboard/" />
           <add key="/charts-sandbox/" value="/" />
           <add key="/what-you-can-do/" value="/stay-home-except-for-essential-needs/" />
