--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,8 @@ trigger:
 pr: none
 
 pool:
-  vmImage: 'ubuntu-latest'
+  ReleaseAgent: AzureProdAse
+  Agent.Name: prod-ase01-jump
 
 steps:
 - task: DeleteFiles@1
