Update page - vaccines-live-chat-test.html 6a1edab67ff19eaa569a1022893b039835c5f5d7

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,7 @@ trigger:
 pr: none
 
 pool:
-  ReleaseAgent: AzureProdAse
-  Agent.Name: prod-ase01-jump
+  vmImage: 'ubuntu-latest'
 
 steps:
 - task: DeleteFiles@1
