--- a/pages/rootcopy/azure-pipelines.yml
+++ b/pages/rootcopy/azure-pipelines.yml
@@ -10,7 +10,8 @@ trigger:
 pr: none
 
 pool:
-  vmImage: 'ubuntu-latest'
+ name: Vmssagents-Acl-Virtual-network
+ Agent.Name: 'vmssagent000000'
 
 steps:
 - task: DeleteFiles@1
