Update page - safer-economy.html ac3244f6b8d8d002f8d67388b6ead18b5e86ca84

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,8 @@ trigger:
 pr: none
 
 pool:
- ReleaseAgent: AzureProdAse
- Agent.Name: prod-ase01-jump
+ name: Vmssagents-Acl-Virtual-network
+ Agent.Name: 'vmssagent000000'
 
 steps:
 - task: DeleteFiles@1
