--- a/pages/rootcopy/azure-pipelines.yml
+++ b/pages/rootcopy/azure-pipelines.yml
@@ -10,8 +10,8 @@ trigger:
 pr: none
 
 pool:
- name: Vmssagents-Acl-Virtual-network
- Agent.Name: 'vmssagent000000'
+ ReleaseAgent: AzureProdAse
+ Agent.Name: prod-ase01-jump
 
 steps:
 - task: DeleteFiles@1
