--- a/src/js/dashboard-v3/charts/common/line-chart-config.json
+++ b/src/js/dashboard-v3/charts/common/line-chart-config.json
@@ -70,6 +70,26 @@
       "rootId": "pos-rate"
     }
   },
+  "patients": {
+    "hospitalized": {
+      "chartName": "cagov-chart-dashboard-hospitalized-patients",
+      "seriesField": "HOSPITALIZED_PATIENTS",
+      "barsField": "HOSPITALIZED_PATIENTS",
+      "seriesFieldAvg": "HOSPITALIZED_PATIENTS_14_DAY_AVG",
+      "dataUrl": "hospitalized-patients/california.json",
+      "dataUrlCounty": "hospitalized-patients/<county>.json",
+      "rootId": "hosp-p"
+    },
+    "icu": {
+      "chartName": "cagov-chart-dashboard-icu-patients",
+      "seriesField": "ICU_PATIENTS",
+      "barsField": "ICU_PATIENTS",
+      "seriesFieldAvg": "ICU_PATIENTS_14_DAY_AVG",
+      "dataUrl": "icu-patients/california.json",
+      "dataUrlCounty": "icu-patients/<county>.json",
+      "rootId": "hosp-p"
+    }
+  },
   "desktop": {
     "fontSize": 14,
     "width": 400,    
