--- a/src/js/dashboard-v3/charts/common/line-chart-config.json
+++ b/src/js/dashboard-v3/charts/common/line-chart-config.json
@@ -2,40 +2,40 @@
   "cases": {
     "episode": {
       "chartName": "cagov-chart-dashboard-confirmed-cases-episode-date",
-      "latestField": "CONFIRMED_CASES_EPISODE_DATE",
+      "latestField": "CONFIRMED_CASES",
       "seriesField": "CONFIRMED_CASES_EPISODE_DATE",
       "seriesFieldAvg": "AVG_CASE_RATE_PER_100K_7_DAYS",
-      "dataUrl": "confirmed-cases-episode-date/california.json",
-      "dataUrlCounty": "confirmed-cases-episode-date/<county>.json",
+      "dataUrl": "confirmed-cases/california.json",
+      "dataUrlCounty": "confirmed-cases/<county>.json",
       "rootId": "cases-ep"
     },
     "reported": {
       "chartName": "cagov-chart-dashboard-confirmed-cases-reported-date",
-      "latestField": "CONFIRMED_CASES_REPORTED_DATE",
+      "latestField": "CONFIRMED_CASES",
       "seriesField": "CONFIRMED_CASES_REPORTED_DATE",
       "seriesFieldAvg": "AVG_CASE_REPORT_RATE_PER_100K_7_DAYS",
-      "dataUrl": "confirmed-cases-reported-date/california.json",
-      "dataUrlCounty": "confirmed-cases-reported-date/<county>.json",
+      "dataUrl": "confirmed-cases/california.json",
+      "dataUrlCounty": "confirmed-cases/<county>.json",
       "rootId": "cases-rep"
     }
   },
   "deaths": {
     "death": {
       "chartName": "cagov-chart-dashboard-confirmed-deaths-death-date",
-      "latestField": "CONFIRMED_DEATHS_DEATH_DATE",
+      "latestField": "CONFIRMED_DEATHS",
       "seriesField": "CONFIRMED_DEATHS_DEATH_DATE",
       "seriesFieldAvg": "AVG_DEATH_RATE_PER_100K_7_DAYS",
-      "dataUrl": "confirmed-deaths-death-date/california.json",
-      "dataUrlCounty": "confirmed-deaths-death-date/<county>.json",
+      "dataUrl": "confirmed-deaths/california.json",
+      "dataUrlCounty": "confirmed-deaths/<county>.json",
       "rootId": "death-date"
     },
     "reported": {
       "chartName": "cagov-chart-dashboard-confirmed-deaths-reported-date",
-      "latestField": "CONFIRMED_DEATHS_REPORTED_DATE",
+      "latestField": "CONFIRMED_DEATHS",
       "seriesField": "CONFIRMED_DEATHS_REPORTED_DATE",
       "seriesFieldAvg": "AVG_DEATH_REPORT_RATE_PER_100K_7_DAYS",
-      "dataUrl": "confirmed-deaths-reported-date/california.json",
-      "dataUrlCounty": "confirmed-deaths-reported-date/<county>.json",
+      "dataUrl": "confirmed-deaths/california.json",
+      "dataUrlCounty": "confirmed-deaths/<county>.json",
       "rootId": "deaths-reported-date"
     }
   },
