--- a/src/js/dashboard-v3/charts/common/line-chart-config.json
+++ b/src/js/dashboard-v3/charts/common/line-chart-config.json
@@ -73,20 +73,20 @@
   "patients": {
     "hospitalized": {
       "chartName": "cagov-chart-dashboard-hospitalized-patients",
+      "latestField": "HOSPITALIZED_PATIENTS",
       "seriesField": "HOSPITALIZED_PATIENTS",
-      "barsField": "HOSPITALIZED_PATIENTS",
       "seriesFieldAvg": "HOSPITALIZED_PATIENTS_14_DAY_AVG",
-      "dataUrl": "hospitalized-patients/california.json",
-      "dataUrlCounty": "hospitalized-patients/<county>.json",
+      "dataUrl": "patients/california.json",
+      "dataUrlCounty": "patients/<county>.json",
       "rootId": "hosp-p"
     },
     "icu": {
       "chartName": "cagov-chart-dashboard-icu-patients",
+      "latestField": "ICU_PATIENTS",
       "seriesField": "ICU_PATIENTS",
-      "barsField": "ICU_PATIENTS",
       "seriesFieldAvg": "ICU_PATIENTS_14_DAY_AVG",
-      "dataUrl": "icu-patients/california.json",
-      "dataUrlCounty": "icu-patients/<county>.json",
+      "dataUrl": "patients/california.json",
+      "dataUrlCounty": "patients/<county>.json",
       "rootId": "hosp-p"
     }
   },
