--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@cagov/accordion": "^2.0.8",
+    "@cagov/accordion": "https://gitpkg.now.sh/cagov/storybook-ca-gov/packages/%40cagov/accordion?accordion/2.0.9",
     "@cagov/anchor-events": "^1.0.0",
     "@cagov/go-to-top": "^1.0.7",
     "@cagov/lookup": "^1.0.3",
